refactor(data): 去除部分代码，部分代码迁移至framework-boot